syntax = "proto3";

package logpilot;

service LogService {
  rpc SendLog (LogRequest) returns (LogResponse);
  rpc ListLogs (ListLogsRequest) returns (ListLogsResponse);
  rpc FetchLogs (FetchLogsRequest) returns (FetchLogsResponse);
}

message LogRequest {
  string channel = 1;
  string level = 2;
  string message = 3;
  map<string, string> meta = 4;
  string storage = 5;
}

message LogResponse {
  string status = 1;
  string message = 2;
}

message ListLogsRequest {
  string storage = 1;
  string channel = 2;
  string level = 3;
  int64 fromTimestamp = 4;
  int64 toTimestamp = 5;
}

message ListLogsResponse {
  repeated LogEntry logs = 1;
}

message FetchLogsRequest {
  string since = 1;
  string channel = 2;
  int32 limit = 3;
  string storage = 4;
}

message FetchLogsResponse {
  repeated LogEntry logs = 1;
}

message LogEntry {
  string channel = 1;
  string level = 2;
  string message = 3;
  map<string, string> meta = 4;
  int64 timestamp = 5;
}